# hypha

./: .gitignore  .releaserc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  config.toml  deny.toml  install.sh  wrangler.toml
.github/: release-notes-template.hbs
.github/actions/build-python-uv/: action.yaml
.github/actions/build-rust/: action.yaml
.github/actions/validate-python-uv/: action.yaml
.github/actions/validate-rust/: action.yaml
.github/actions/zip-and-upload/: README.md  action.yaml
.github/matcher/: cargo.json
.github/workflows/: deploy-docs.yml  pr.yaml  release.yaml  validate.yaml
crates/api/src/: lib.rs
crates/certutil/: Cargo.toml
crates/certutil/src/: cli.rs  main.rs
crates/clock/: Cargo.toml
crates/clock/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: cli.rs  error.rs  layered_config.rs  lib.rs
crates/data/: Cargo.toml
crates/data/src/: cli.rs  config.rs  lib.rs  network.rs  tensor.rs  tensor_data.rs
crates/data/tests/: cli_init_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: cli.rs  config.rs  main.rs  network.rs
crates/gateway/tests/: cli_init_tests.rs
crates/hypha_network/src/swarm/: tests.rs
crates/leases/: Cargo.toml
crates/leases/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: lib.rs
crates/network/: Cargo.toml
crates/network/examples/basic_networking/: README.md  main.rs
crates/network/examples/request_response/: README.md  main.rs
crates/network/src/: cbor_codec.rs  cert.rs  coordinate.rs  dial.rs  error.rs  external_address.rs  gossipsub.rs  kad.rs  lib.rs  listen.rs  mtls.rs  request_response.rs  stream.rs  stream_pull.rs  stream_push.rs  swarm.rs  utils.rs
crates/network/tests/: gossipsub_test.rs  kad_test.rs  mtls_test.rs  request_response_test.rs
crates/resources/: Cargo.toml
crates/resources/src/: lib.rs
crates/scheduler/: Cargo.toml  build.rs
crates/scheduler/src/: allocator.rs  batch_scheduler.rs  cli.rs  config.rs  controller.rs  jobs.rs  lib.rs  main.rs  metrics_bridge.rs  network.rs  network_tests.rs  scheduler_config.rs  simulation.rs  slice_tracker.rs  statistics.rs  status_bridge.rs  task.rs  tasks.rs  worker.rs
crates/scheduler/src/scheduling/: batch_scheduler.rs  data_scheduler.rs  mod.rs
crates/scheduler/src/tracker/: mod.rs  progress.rs  slice.rs  worker.rs
crates/scheduler/tests/: cli_init_tests.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: attributes.rs  bandwidth.rs  errors.rs  layer.rs  lib.rs  logging.rs  metrics.rs  otlp.rs  testing.rs  tracing.rs
crates/torch_driver/: Cargo.toml  pyproject.toml  test.yaml
crates/torch_driver/python/: training.py
crates/torch_driver/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: arbiter.rs  bin_packing.rs  cli.rs  config.rs  file_transfer.rs  job_manager.rs  lease_manager.rs  lib.rs  main.rs  network.rs  network_tests.rs  request_evaluator.rs  resources.rs
crates/worker/src/connector/: mod.rs
crates/worker/src/driver/: mod.rs  parameter_server.rs  router.rs
crates/worker/src/executor/: bridge.rs  mod.rs  parameter_server.rs  process.rs
crates/worker/src/router/: cache.rs  draft.rs  mod.rs  parameter_server.rs  resolver.rs
crates/worker/tests/: cli_init_tests.rs
docs/: README.md  _index.md  architecture.md  config.toml  contributing.md  data.md  deployment.md  gateway.md  installation.md  introduction.md  quick-start.md  quickstart.md  scheduler.md  security.md  training.md  worker.md
docs/architecture/: _index.md  gateway.md  network.md
docs/content/: 404.md  architecture.md  data-node.md  gateway.md  getting-started.md  installation.md  introduction.md  operations.md  scheduler.md  security.md  training.md  worker.md
docs/content/architecture/: scheduler.md  worker.md
docs/deployment/: _index.md
docs/reference/: hypha-certutil-cli.md  hypha-data-cli.md  hypha-gateway-cli.md  hypha-scheduler-cli.md  hypha-worker-cli.md
docs/themes/hypha/static/css/: style.css
docs/themes/hypha/templates/: base.html  index.html  page.html  section.html
drivers/aim-driver/: .gitignore  README.md  main.py  pyproject.toml
drivers/hypha-accelerate-driver/: pyproject.toml
drivers/hypha-accelerate-driver/src/: api.py  dummy.py  training.py
executors/accelerate/: README.md  pyproject.toml  test.yaml
executors/accelerate/src/hypha/accelerate_executor/: api.py  dataset.py  model.py  training.py  utils.py
hypha-rest/: API.md  Cargo.toml  README.md
hypha-rest/src/: main.rs
hypha-rest/src/api/v0/: mod.rs
hypha-rest/src/api/v0/task/: mod.rs
hypha-rest/src/service/: error.rs  mod.rs
hypha-rest/src/state/: error.rs  mod.rs
hypha-rest/src/state/persistence/: in_memory.rs  mod.rs  rocksdb.rs
python/hypha-accelerate-driver/: api.py  pyproject.toml  training.py
rfc/: 2025-03-25-libp2p_network_stack.md  2025-03-27_decentralized_architecture.md  2025-04-03-p2p-resource-discovery-protocol.md  2025-04-30_driver_worker_communication.md  2025-05-09-torch-driver.md  2025-05-13-market_based_resource_allocation.md  2025-05-30_mtls.md  2025-08-04_decentralized_resource_allocation_protocol.md  2025-08-14_job_bridge.md  2025-10-01_reinforcement_learning.md  2025-10-07_data_nodes.md  2025-10-16_performance_aware_scheduling.md  TEMPLATE.md  decentralized_resource_allocation_protocol.md
themes/hypha/: theme.toml
