[workspace]
resolver = "3"
members = [
    "crates/certutil",
    "crates/config",
    "crates/data",
    "crates/gateway",
    "crates/leases",
    "crates/messages",
    "crates/network",
    "crates/scheduler",
    "crates/worker",
    "crates/telemetry",
]
default-members = [
    "crates/certutil",
    "crates/config",
    "crates/data",
    "crates/gateway",
    "crates/network",
    "crates/scheduler",
    "crates/worker",
    "crates/telemetry",
]

[workspace.package]
publish = false
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["http2"] }
candle-core = "0.9.1"
ciborium = "0.2.2"
clap = { version = "4.5.31", features = ["derive"] }
documented = "0.9.2"
figment = { version = "0.10", features = ["toml", "env"] }
glob = "0.3"
indoc = "2"
futures-util = "0.3"
http-body-util = "0.1.3"
hypha-config = { path = "crates/config" }
hypha-leases = { path = "crates/leases" }
hypha-messages = { path = "crates/messages" }
hypha-network = { path = "crates/network" }
hypha-telemetry = { path = "crates/telemetry" }
libp2p = { version = "0.56.0", features = [
    "cbor",
    "dcutr",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "ping",
    "quic",
    "relay",
    "request-response",
    "serde",
    "tcp",
    "tls",
    "tokio",
    "yamux",
    ] }
libp2p-stream = { version = "0.4.0-alpha" }
libp2p-swarm-test = { version = "0.6.0", features = ["tokio"] }
miette = { version = "7.6.0", features = ["fancy"] }
mime = "0.3.17"
mockall = "0.13.1"
nix = { version = "0.30.1", features = ["signal"] }
pin-project = "1.1.7"
proptest = "1.6.0"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
safetensors = "0.4.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "signal",
    "io-util",
] }
tokio-stream = { version = "0.1.17", features = ["fs", "sync"] }
tokio-util = { version = "0.7.15", features = ["compat", "rt"] }
toml = { version = "0.9.5" }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "url", "uuid"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
# Patch 'libp2p' to enable mTLS support
libp2p = { git = "https://github.com/hypha-space/rust-libp2p", tag = "v0.56.0-mtls4" }
libp2p-quic = { git = "https://github.com/hypha-space/rust-libp2p", tag = "v0.56.0-mtls4" }
libp2p-stream = { git = "https://github.com/hypha-space/rust-libp2p", tag = "v0.56.0-mtls4" }
libp2p-swarm-test = { git = "https://github.com/hypha-space/rust-libp2p", tag = "v0.56.0-mtls4" }
libp2p-tls = { git = "https://github.com/hypha-space/rust-libp2p", tag = "v0.56.0-mtls4" }
