[package]
edition.workspace = true
publish.workspace = true
name = "hypha-rest"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["http2"] }
futures-util = "0.3.31"
rocksdb = { version = "0.23.0", default-features = false, features = [
    "bindgen-runtime",
    "zstd",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
bytes = "1.10.1"
http-body-util = "0.1.3"
mime = "0.3.17"
tempfile = "3.19.1"
tower = { version = "0.5.2", features = ["util"] }
