[package]
name = "hypha-certutil"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[[bin]]
name = "hypha-certutil"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rcgen.workspace = true
rustls.workspace = true
thiserror.workspace = true
time = "0.3.41"
