[package]
name = "hypha-config"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
documented.workspace = true
figment.workspace = true
hypha-network.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
