[package]
name = "hypha-config"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
documented.workspace = true
figment.workspace = true
hypha-network.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit = "0.23.7"

[dev-dependencies]
tempfile.workspace = true
