[package]
name = "hypha-data"
version = "0.0.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures-util.workspace = true
hypha-config.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
memmap2.workspace = true
miette.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
