[package]
name = "hypha-data"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"
build = "build.rs"

[dependencies]
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures-util.workspace = true
hypha-config.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
hypha-telemetry.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
clap.workspace = true
serde.workspace = true
clap-markdown = "0.1.5"
