[package]
name = "hypha-gateway"
version = "0.0.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
clap.workspace = true
futures-util.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hypha-network.workspace = true
