[package]
name = "hypha-gateway"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"
build = "build.rs"

[dependencies]
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures-util.workspace = true
hypha-config.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
hypha-telemetry.workspace = true
indoc.workspace = true
libp2p.workspace = true
miette.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
clap.workspace = true
clap-markdown = "0.1.5"
hypha-network.workspace = true
indoc.workspace = true
libp2p.workspace = true
serde.workspace = true
