[package]
name = "hypha-network"
version = "0.0.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
async-trait.workspace = true
ed25519-dalek = { version = "2.1", features = ["alloc", "pkcs8", "pem"] }
futures-rustls.workspace = true
futures-util.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
pin-project.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webpki.workspace = true

[dev-dependencies]
clap.workspace = true
futures = "0.3.31"
libp2p-swarm-test = { version = "0.6.0", features = ["tokio"] }
mockall.workspace = true
proptest.workspace = true
rcgen.workspace = true
time = "0.3"
