[package]
name = "hypha-network"
version = "0.0.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["alloc", "pkcs8", "pem"] }
futures-util.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
pin-project.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipnet = { version = "2", features = ["serde"] }

[dev-dependencies]
clap.workspace = true
libp2p-swarm-test.workspace = true
mockall.workspace = true
proptest.workspace = true
rcgen.workspace = true
time = "0.3"
