[package]
name = "hypha-scheduler"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
ciborium.workspace = true
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures.workspace = true
futures-util.workspace = true
hypha-config.workspace = true
hypha-leases.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
miette.workspace = true
pin-project.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
