[package]
name = "hypha-scheduler"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"
build = "build.rs"

[dependencies]
ciborium.workspace = true
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures-util.workspace = true
hypha-config.workspace = true
hypha-leases.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
hypha-telemetry.workspace = true
indoc.workspace = true
itertools = "0.14.0"
libp2p.workspace = true
libp2p-stream.workspace = true
miette.workspace = true
pin-project.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
clap.workspace = true
clap-markdown = "0.1.5"
hypha-network.workspace = true
indoc.workspace = true
libp2p.workspace = true
serde.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "signal",
    "io-util",
    "time",
    "test-util"
] }
