[package]
name = "hypha-telemetry"
version = "0.0.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Hypha telemetry utilities with OTLP metrics and libp2p bandwidth instrumentation"

[dependencies]
futures-util = "0.3"
futures-io = "0.3"
libp2p = { workspace = true }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client", "reqwest-rustls", "logs" ] }
opentelemetry-appender-tracing = "0.31"
pin-project = { workspace = true }
serde.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
http = "1.1"


[features]
default = []

[dev-dependencies]
serde_json = "1.0"
proptest.workspace = true
futures-executor = "0.3"
futures-task = "0.3"
