[package]
name = "hypha-telemetry"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Hypha telemetry utilities with OTLP metrics and libp2p bandwidth instrumentation"

[features]
default = []

[dependencies]
futures-io = "0.3"
futures-util = "0.3"
http = "1.1"
libp2p = { workspace = true }
opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client", "reqwest-rustls", "logs" ] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "rt-tokio", "testing"] }
pin-project = { workspace = true }
serde.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
futures-executor = "0.3"
futures-task = "0.3"
proptest.workspace = true
serde_json = "1.0"
