[package]
name = "hypha-worker"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
axum.workspace = true
candle-core.workspace = true
ciborium.workspace = true
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures-util.workspace = true
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
hypha-config.workspace = true
hypha-leases.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
miette.workspace = true
nix.workspace = true
ordered-float = "5"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
mime.workspace = true
mockall.workspace = true
proptest.workspace = true
serde_json.workspace = true
tower.workspace = true
