[package]
name = "hypha-worker"
version.workspace = true
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"
build = "build.rs"

[dependencies]
axum.workspace = true
candle-core.workspace = true
ciborium.workspace = true
clap.workspace = true
documented.workspace = true
figment.workspace = true
futures-util.workspace = true
# Use a pre-relase of v0.4.3 because older versions depend on `number_prefix` which is unmaintained
hf-hub = { git = "https://github.com/huggingface/hf-hub.git", rev = "94b8385", default-features = false, features = ["tokio", "rustls-tls"] }
hypha-config.workspace = true
hypha-leases.workspace = true
hypha-messages.workspace = true
hypha-network.workspace = true
hypha-telemetry.workspace = true
indoc.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
miette.workspace = true
nix.workspace = true
ordered-float = "5"
reqwest.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true

[build-dependencies]
indoc.workspace = true
clap.workspace = true
hypha-network.workspace = true
libp2p.workspace = true
serde.workspace = true
clap-markdown = "0.1.5"

[dev-dependencies]
http-body-util.workspace = true
mime.workspace = true
mockall.workspace = true
proptest.workspace = true
serde_json.workspace = true
tower.workspace = true
