[project]
name = "hypha-accelerate-driver"
version = "0.1.0"
description = "Add your description here"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.2",
]

[dependency-groups]
dev = ["ruff>=0.11.9"]
